#Revision history for {{ $dist->name }}

{{$NEXT}}

v1.1.1    2020-12-17 15:51:58+00:00 Europe/London
  [Tests]
  - Specify minimum version of Sub::Identify.

v1.1.0    2020-12-17 13:42:01+00:00 Europe/London
  [Enhancements]
  - Subroutine constants are genuinely marked as subroutine constants.

  [Toolchain]
  - Removed `.travis.yml` from git repo.

v1.0.0    2020-12-11 13:56:43+00:00 Europe/London
  - No changes: version bumped because module is considered mature.

v0.4.2    2020-09-10 12:52:53+01:00 Europe/London
  [Documentation]
  - Added INSTALL file to the distribution.

  - Updated copyright year.

  [Toolchain]
  - Added keywords to distribution metadata.

  - Tweaks to dist.ini for simplifying build.

  - Include core modules in prerequisites.

v0.4.1    2018-05-08 16:14:23+01:00 Europe/London
  [Bug Fixes]
  - Use local variable for regex capture.

  [Enhancements]
  - Improve type checking.

v0.4.0    2018-05-02 20:42:40+01:00 Europe/London
  [Enhancements]
  - Enable strictures.

  - Simplified the enum generation code, and added the ability to
    specify a custom incrementing function.

  - Check values against types.

  - Miscellaneous improvements to the import method.

  [Documentation]
  - Added note about support for older Perl versions.

  [Tests]
  - Remove unnecessary compilation test.

  - Add tests for const export.

  - Added better tests for enums.

  [Toolchain]
  - Remove core and redundant prerequisites.

  - Update module metadata.

v0.3.1    2018-01-16 23:41:07+00:00 Europe/London
  [Enhancements]
  - Check for arrayrefs instead of unblessed arrayrefs.

  - Export coderefs as well as constants.

  - Add Const::Fast::const to @EXPORT_OK.

  [Bug Fixes]
  - Remove unnecessary test dependencies.

  - Add missing developer dependency for Test::Warnings.

v0.3.0    2018-01-16 00:45:52+00:00 Europe/London
  [Enhancements]
  - Switch to use Ref::Util.

  [Documentation]
  - Added note about dependencies.
