@@ -431,6 +431,33 @@ Objects are also supported,
       '$foo' => Something->new( 123 ),
     ];
 
+=head2 Export Tags
+
+By default, all symbols are exportable (in C<@EXPORT_OK>.)
+
+The C<:default> tag is the same as not specifying any exports.
+
+The C<:all> tag exports all symbols.
+
+=head1 KNOWN ISSUES
+
+=head2 Support for older Perl versions
+
+This module requires Perl v5.10 or newer.
+
+Pull requests to support older versions of Perl are welcome. See
+L</SOURCE>.
+
+=head2 Exporting Functions
+
+L<Const::Exporter> is not intended for use with modules that also
+export functions.
+
+There are workarounds that you can use, such as getting
+L<Const::Exporter> to export your functions, or munging C<@EXPORT>
+etc. separately, but these are not supported and changes in the
+future my break our code.
+
 =head2 Mixing POD with Tags
 
 The following code is a syntax error, at least with some versions of
@@ -466,33 +493,6 @@ e.g.
 
   use Const::Exporter
     b => [ bar => 2 ];
-
-=head2 Export Tags
-
-By default, all symbols are exportable (in C<@EXPORT_OK>.)
-
-The C<:default> tag is the same as not specifying any exports.
-
-The C<:all> tag exports all symbols.
-
-=head1 KNOWN ISSUES
-
-=head2 Support for older Perl versions
-
-This module requires Perl v5.10 or newer.
-
-Pull requests to support older versions of Perl are welcome. See
-L</SOURCE>.
-
-=head2 Exporting Functions
-
-L<Const::Exporter> is not intended for use with modules that also
-export functions.
-
-There are workarounds that you can use, such as getting
-L<Const::Exporter> to export your functions, or munging C<@EXPORT>
-etc. separately, but these are not supported and changes in the
-future my break our code.
 
 =for readme continue
 
